# matchsorter

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bench-compare/: bench.mjs  bench_rust.rs  package-lock.json  package.json  results_js.json  results_rust.json  run.sh
benches/: benchmarks.rs
docs/: 001-core-ranking-engine-status.md  001-core-ranking-engine-tickets.md  002-key-extraction-status.md  002-key-extraction-tickets.md  003-public-api-sorting-benchmarks-status.md  003-public-api-sorting-benchmarks-tickets.md  004-performance-hot-path-optimizations-status.md  004-performance-hot-path-optimizations-tickets.md  PRD-001-core-ranking-engine.md  PRD-002-key-extraction.md  PRD-003-public-api-sorting-benchmarks.md  PRD-004-performance-hot-path-optimizations.md  PRD-005-crate-publication.md
docs/001-core-ranking-engine-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  ticket-03-impl.md  ticket-03-review.md  ticket-04-impl.md  ticket-04-review.md  ticket-05-impl.md  ticket-05-review.md  ticket-06-impl.md  ticket-06-review.md  ticket-07-impl.md  ticket-07-review.md  ticket-08-impl.md
docs/002-key-extraction-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  ticket-03-impl.md  ticket-03-review.md  ticket-04-impl.md  ticket-04-review.md  ticket-05-impl.md
docs/003-public-api-sorting-benchmarks-reports/: ticket-01-impl.md  ticket-02-impl.md  ticket-04-impl.md  (+4 more)
src/: key.rs  lib.rs  no_keys.rs  options.rs  sort.rs
tests/: integration.rs  key_extraction.rs  ranking.rs
(+10 files in other folders)
