[package]
name = "matchsorter"
version = "0.1.0"
edition = "2024"
description = "Fuzzy string matching and sorting, inspired by match-sorter"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["fuzzy", "search", "filter", "sort", "match"]
categories = ["algorithms", "text-processing"]
repository = "https://github.com/AetherXHub/matchsorter"
homepage = "https://github.com/AetherXHub/matchsorter"
exclude = ["bench-compare/", "docs/", ".claude/"]

[dependencies]
unicode-normalization = "0.1"
memchr = "2.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "bench_compare"
path = "bench-compare/bench_rust.rs"
